Fixed background image, because was not showing

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -48,7 +48,7 @@ body {
 
 body{
   background-color: #f4f2f2;
-  background-image: url('./public/img/background.png');
+  background-image: url('https://in0c3nc10.github.io/Vitoria-Designer-Grafico/public/img/background.png');
 }
 
 a, a:visited{
